// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-buttonOutlined-1"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Run
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`runs an experiment 1`] = `
<div
  aria-hidden="true"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-buttonOutlined-2"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Run
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
